--- a/index.html
+++ b/index.html
@@ -3,10 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Animated Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <div class="navbar">
+            <img src="images/logo.png" alt="" class="logo">
+            <nav>
+                <ul>
+                    <li> <a href="">Home</a></li>
+                    <li> <a href="">About</a></li>
+                    <li> <a href="">Collections</a></li>
+                    <li> <a href="">Category</a></li>
+                </ul>
+            </nav>
+            <img src="images/cart.png" alt="" class="cart">
+
+        </div>
+        <div class="content">
+            <a href="" class="btn">2021 Collections</a>
+            <h1>You should always <br>make sure you <br> look stunning</h1>
+            <p>Clothes that are sure to heat you up during the cold season.</p>
+            <div class="arrow-icons">
+                <img src="images/back-arrow.png" alt="">
+                <img src="images/next-arrow.png" alt="">
+            </div>
+        </div>
+        <img src="images/warmm.png" class="feature-img" alt="">
+        <div class="social-links">
+            <a href="">FACEBOOK</a>
+            <a href="">INSTAGRAM</a>
+            <a href="">TWITTER</a>
+
+        </div>
+
+    </div>
     
 </body>
 </html>
